--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # improve colors
-set -g default-terminal 'screen-256color'
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # enable mouse
 set-option -g mouse on
@@ -12,6 +13,12 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
+
+# Create splits and vertical splits
+bind-key v split-window -h -p 50 -c "#{pane_current_path}"
+bind-key ^V split-window -h -p 50 -c "#{pane_current_path}"
+bind-key s split-window -p 50 -c "#{pane_current_path}"
+bind-key ^S split-window -p 50 -c "#{pane_current_path}"
 
 set -g prefix2 C-s
 
@@ -29,6 +36,12 @@ set -g status-right ''
 # increase scrollback lines
 set -g history-limit 10000
 
+# Copy to clipboard
+bind P paste-buffer
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-selection
+bind -Tcopy-mode-vi r send -X rectangle-toggle
+
 # prefix -> back-one-character
 bind-key C-b send-prefix
 # prefix-2 -> forward-incremental-history-search
@@ -43,7 +56,6 @@ if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
