Add nord-tmux theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -58,6 +58,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'arcticicestudio/nord-tmux'
+
+set -g @nord_tmux_no_patched_font "1"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
