--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,8 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 # enable mouse
 set-option -g mouse on
 
+set-option -g status-position top
+
 # act like vim
 setw -g mode-keys vi
 bind-key h select-pane -L
