Change the whole config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,68 +1,79 @@
-# improve colors
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Tmux Prefix Highlight
+set -g @plugin "tmux-plugins/tmux-prefix-highlight"
+set -g @prefix_highlight_show_copy_mode "on"
 
-# enable mouse
-set-option -g mouse on
-
-set-option -g status-position top
-
-# act like vim
-setw -g mode-keys vi
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-
-# Create splits and vertical splits
-bind-key v split-window -h -p 50 -c "#{pane_current_path}"
-bind-key ^V split-window -h -p 50 -c "#{pane_current_path}"
-bind-key s split-window -p 50 -c "#{pane_current_path}"
-bind-key ^S split-window -p 50 -c "#{pane_current_path}"
-
-set -g prefix2 C-s
-
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set-window-option -g pane-base-index 1
-
-# renumber windows sequentially after closing any of them
-set -g renumber-windows on
-
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
-
-# increase scrollback lines
-set -g history-limit 10000
-
-# Copy to clipboard
-bind P paste-buffer
-bind -Tcopy-mode-vi v send -X begin-selection
-bind -Tcopy-mode-vi y send -X copy-selection
-bind -Tcopy-mode-vi r send -X rectangle-toggle
-
-# prefix -> back-one-character
-bind-key C-b send-prefix
-# prefix-2 -> forward-incremental-history-search
-bind-key C-s send-prefix -2
-
-# don't suspend-client
-unbind-key C-z
-
-# Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# Tmux Resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'arcticicestudio/nord-tmux'
 
+# Nord Tmux
+set -g @plugin "arcticicestudio/nord-tmux"
 set -g @nord_tmux_no_patched_font "1"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# Enable 256 color support
+set -g default-terminal "xterm-256color"
+
+# Enable 24-bit "True color" support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# Move status bar to the top
+set-option -g status-position top
+
+# Use vi(m) key bindings
+setw -g mode-keys vi
+set -g status-keys vi
+
+# Increase the maximum history length
+set -g history-limit 10000
+
+# Enable mouse mode
+set -g mouse on
+
+# Less stretching to get to the first item
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Renumber windows on close
+set -g renumber-windows on
+
+# Use multiple commands without sending the prefix-key within 1 second (default is 500 ms)
+set -g repeat-time 1000
+
+# No delay for escape key press
+set -sg escape-time 0
+
+# <Prefix>-<h|v> for window splitting
+unbind %
+bind h split-window -v
+unbind '"'
+bind v split-window -h
+
+# <Prefix>-<Ctrl>-<Shift><Arrow> to resize panes
+bind -r C-S-Left resize-pane -L
+bind -r C-S-Right resize-pane -R
+bind -r C-S-Up resize-pane -U
+bind -r C-S-Down resize-pane -D
+
+# <Prefix>-<Ctrl>-<Arrow> to switch panes
+bind -r C-Left select-pane -L
+bind -r C-Right select-pane -R
+bind -r C-Up select-pane -U
+bind -r C-Down select-pane -D
+
+# <Prefix>-<Escape> to enter copy-mode with vi(m) key bindings
+bind Escape copy-mode
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-selection
+
+# Use <Prefix>-<p> to paste the copied content
+unbind p
+bind p paste-buffer
+
+# <Prefix>-r to reload the configuration file
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded configuration!"
+
+# Import the local configuration file if it exists
+if "test -f ~/.tmux.conf.local" "source '~/.tmux.conf.user'"
+
+# Initialize and run tpm
+run "~/.tmux/plugins/tpm/tpm"
