--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,3 @@
-# Tmux Prefix Highlight
-set -g @plugin "tmux-plugins/tmux-prefix-highlight"
-set -g @prefix_highlight_show_copy_mode "on"
-
-# Tmux Resurrect
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
-# Nord Tmux
-set -g @plugin "arcticicestudio/nord-tmux"
-set -g @nord_tmux_no_patched_font "1"
-
 # Enable 256 color support
 set -g default-terminal "xterm-256color"
 
@@ -74,6 +63,12 @@ bind r source-file ~/.tmux.conf \; display "Reloaded configuration!"
 
 # Import the local configuration file if it exists
 if "test -f ~/.tmux.conf.local" "source '~/.tmux.conf.user'"
+
+# Plugins
+set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin "tmux-plugins/tmux-prefix-highlight"
+set -g @nord_tmux_no_patched_font "1"
 
 # Initialize and run tpm
 run "~/.tmux/plugins/tpm/tpm"
