Justify centre window list

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,8 @@ set -g default-terminal "xterm-256color"
 # Enable 24-bit "True color" support
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# Move status bar to the top
+# Status bar
+set -g status-justify centre
 set-option -g status-position top
 
 # Use vi(m) key bindings
