Fix cursor shape does not working properly

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 set -g default-terminal "xterm-256color"
 
 # Enable 24-bit "True color" support
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Status bar
 set-option -g status-position top
