Remove unused configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,5 @@
-# Enable 256 color support
+# Improve color
 set -g default-terminal "xterm-256color"
-
-# Enable 24-bit "True color" support
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Status bar
@@ -57,18 +55,9 @@ bind -T copy-mode-vi 'y' send-keys -X copy-selection
 unbind p
 bind p paste-buffer
 
-# <Prefix>-r to reload the configuration file
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded configuration!"
-
-# Import the local configuration file if it exists
-if "test -f ~/.tmux.conf.local" "source '~/.tmux.conf.user'"
-
 # Plugins
-set -g @plugin "arcticicestudio/nord-tmux"
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin "tmux-plugins/tmux-prefix-highlight"
-set -g @nord_tmux_no_patched_font "1"
 
 # Initialize and run tpm
 run "~/.tmux/plugins/tpm/tpm"
