--- a/tmux.conf
+++ b/tmux.conf
@@ -5,55 +5,56 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 # Status bar
 set-option -g status-position top
 
-# Use vi(m) key bindings
-setw -g mode-keys vi
-set -g status-keys vi
+# Start windows and panes at 1
+set -g base-index 1
+setw -g pane-base-index 1
 
-# Increase the maximum history length
-set -g history-limit 10000
+# Increase scrollback buffer size
+set -g history-limit 100000
+
+# Don't send prefix-key within 1 second (default is 500 ms)
+set -g repeat-time 1000
 
 # Enable mouse mode
 set -g mouse on
 
-# Less stretching to get to the first item
-set -g base-index 1
-setw -g pane-base-index 1
-
-# Renumber windows on close
-set -g renumber-windows on
-
-# Use multiple commands without sending the prefix-key within 1 second (default is 500 ms)
-set -g repeat-time 1000
-
-# No delay for escape key press
-set -sg escape-time 0
-
-# <Prefix>-<h|v> for window splitting
+# Split panes
 unbind %
 bind h split-window -v
 unbind '"'
 bind v split-window -h
 
-# <Prefix>-<Ctrl>-<Shift><Arrow> to resize panes
-bind -r C-S-Left resize-pane -L
-bind -r C-S-Right resize-pane -R
-bind -r C-S-Up resize-pane -U
-bind -r C-S-Down resize-pane -D
+# Navigate panes
+bind H select-pane -L
+bind L select-pane -R
+bind K select-pane -U
+bind J select-pane -D
 
-# <Prefix>-<Ctrl>-<Arrow> to switch panes
-bind -r C-Left select-pane -L
-bind -r C-Right select-pane -R
-bind -r C-Up select-pane -U
-bind -r C-Down select-pane -D
+# Resize panes (no prefix)
+bind -n C-h resize-pane -L
+bind -n C-j resize-pane -D
+bind -n C-k resize-pane -U
+bind -n C-l resize-pane -R
 
-# <Prefix>-<Escape> to enter copy-mode with vi(m) key bindings
+# Use vi(m) key bindings
+setw -g mode-keys vi
+set -g status-keys vi
+
+# Address vim mode switching delay
+set -sg escape-time 0
+
+# Enter copy-mode with vim key bindings
 bind Escape copy-mode
 bind -T copy-mode-vi 'v' send-keys -X begin-selection
 bind -T copy-mode-vi 'y' send-keys -X copy-selection
 
-# Use <Prefix>-<p> to paste the copied content
+# Paste the copied content
 unbind p
 bind p paste-buffer
+
+# Re-source config
+unbind r
+bind r source-file ~/.tmux.conf
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
