--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,18 @@
+# Plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+
 # Improve color
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Status bar
 set-option -g status-position top
+set -g status-justify centre
+set -g status-bg default
+set -g status-fg white
+set -g status-left "[#S]"
+set -g status-right "%H:%M | %Y-%m-%d"
 
 # Start windows and panes at 1
 set -g base-index 1
@@ -55,10 +64,6 @@ bind p paste-buffer
 # Re-source config
 unbind r
 bind r source-file ~/.tmux.conf
-
-# Plugins
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin "tmux-plugins/tmux-prefix-highlight"
 
 # Initialize and run tpm
 run "~/.tmux/plugins/tpm/tpm"
