Remap navigating and selecting panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,15 +29,19 @@ set -g mouse on
 
 # Split panes
 unbind %
-bind h split-window -v
+bind b split-window -v
 unbind '"'
 bind v split-window -h
 
 # Navigate panes
-bind H select-pane -L
-bind L select-pane -R
-bind K select-pane -U
-bind J select-pane -D
+unbind [
+bind [ select-pane -t :.-
+unbind ]
+bind ] select-pane -t :.+
+bind h select-pane -L
+bind l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
 
 # Resize panes (no prefix)
 bind -n C-h resize-pane -L
