Use 12-hour clock format

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set -g status-justify centre
 set -g status-bg default
 set -g status-fg white
 set -g status-left "[#S]"
-set -g status-right "%H:%M | %Y-%m-%d"
+set -g status-right "%l:%M %p | %Y-%m-%d"
 
 # Start windows and panes at 1
 set -g base-index 1
