Add prefix highlight to status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,8 @@ set -g status-justify centre
 set -g status-bg default
 set -g status-fg white
 set -g status-left "[#S]"
-set -g status-right "%l:%M %p | %Y-%m-%d"
+set -g status-right "#{prefix_highlight} %l:%M %p | %Y-%m-%d"
+set -g @prefix_highlight_bg default
 
 # Start windows and panes at 1
 set -g base-index 1
@@ -29,9 +30,9 @@ set -g mouse on
 
 # Split panes
 unbind %
-bind b split-window -v
+bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
-bind v split-window -h
+bind v split-window -h -c "#{pane_current_path}"
 
 # Navigate panes
 unbind [
