Add clear screen binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# Clear screen and history
+bind -n C-c send-keys "clear && tmux clear-history" \; send-keys "Enter"
+
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
