Tweak status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,8 @@ set-option -g status-position top
 set -g status-justify centre
 set -g status-bg default
 set -g status-fg white
+set -g window-status-current-bg brightblue
+set -g window-status-current-fg black
 set -g status-left "[#S]"
 set -g status-right "#{prefix_highlight} %l:%M %p | %Y-%m-%d"
 set -g @prefix_highlight_bg default
