Open new window in current directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,9 @@ set -g repeat-time 1000
 # Enable mouse mode
 set -g mouse on
 
+# New windows in current directory
+bind c new-window -c "#{pane_current_path}"
+
 # Split panes
 unbind %
 bind b split-window -v -c "#{pane_current_path}"
