Use reattach-to-user-namespace

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# Use reattach-to-user-namepsace to start the shell
+set -g default-command "reattach-to-user-namespace -l zsh"
+
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
@@ -59,13 +62,8 @@ set -g status-keys vi
 set -sg escape-time 0
 
 # Enter copy-mode with vim key bindings
-bind Escape copy-mode
-bind -T copy-mode-vi 'v' send-keys -X begin-selection
-bind -T copy-mode-vi 'y' send-keys -X copy-selection
-
-# Paste the copied content
-unbind p
-bind p paste-buffer
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Re-source config
 unbind r
