Bind Enter to use copy-pipe

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,3 @@
-# Use reattach-to-user-namepsace to start the shell
-set -g default-command "reattach-to-user-namespace -l zsh"
-
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
@@ -64,6 +61,10 @@ set -sg escape-time 0
 # Enter copy-mode with vim key bindings
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -T copy-mode-vi Enter
+bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Re-source config
 unbind r
