--- a/tmux.conf
+++ b/tmux.conf
@@ -9,9 +9,9 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 # Status bar
 set-option -g status-position top
 set -g status-justify centre
-set -g status-bg default
+set -g status-bg colour236
 set -g status-fg white
-set -g window-status-current-bg brightblue
+set -g window-status-current-bg blue
 set -g window-status-current-fg black
 set -g status-left "[#S]"
 set -g status-right "#{prefix_highlight} %l:%M %p | %Y-%m-%d"
@@ -54,6 +54,9 @@ bind -n C-l resize-pane -R
 # Use vi(m) key bindings
 setw -g mode-keys vi
 set -g status-keys vi
+
+# Pane active border
+set -g pane-active-border-fg blue
 
 # Address vim mode switching delay
 set -sg escape-time 0
