Fix nvim's checkhealth

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 run "~/.tmux/plugins/tpm/tpm"
 
 # Improve color
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Address vim mode switching delay
