--- a/tmux.conf
+++ b/tmux.conf
@@ -38,18 +38,6 @@ bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
 
-# Navigate panes
-bind h select-pane -L
-bind l select-pane -R
-bind k select-pane -U
-bind j select-pane -D
-
-# Resize panes (no prefix)
-bind -n C-h resize-pane -L
-bind -n C-j resize-pane -D
-bind -n C-k resize-pane -U
-bind -n C-l resize-pane -R
-
 # Pane active border
 set -g pane-active-border-fg blue
 
@@ -68,6 +56,7 @@ bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namesp
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 # Initialize and run tpm
 run "~/.tmux/plugins/tpm/tpm"
