--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
 
 # Pane active border
-set -g pane-active-border-fg blue
+set -g pane-active-border-fg red
 
 # Use vi(m) key bindings
 setw -g mode-keys vi
