Update tmux colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ set-option -g status-position top
 set -g status-justify centre
 set -g status-bg colour236
 set -g status-fg white
-set -g window-status-current-bg blue
+set -g window-status-current-bg colour6
 set -g window-status-current-fg black
 set -g status-left "[#S]"
 set -g status-right "#{prefix_highlight} %l:%M %p | %Y-%m-%d"
@@ -39,7 +39,7 @@ unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
 
 # Pane active border
-set -g pane-active-border-fg red
+set -g pane-active-border-fg colour6
 
 # Use vi(m) key bindings
 setw -g mode-keys vi
