Update status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,18 +28,18 @@ set -g status-bg colour236
 set -g status-fg white
 set -g window-status-current-bg colour6
 set -g window-status-current-fg black
-set -g status-left "[#S]"
-set -g status-right "#{prefix_highlight} %l:%M %p | %Y-%m-%d"
+set -g status-left "#[fg=black,bg=colour6][#S]"
+set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6]%l:%M %p | %Y-%m-%d"
 set -g @prefix_highlight_bg default
+
+# Make active pane border blue
+set -g pane-active-border-fg colour6
 
 # Split panes
 unbind %
 bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
-
-# Pane active border
-set -g pane-active-border-fg colour6
 
 # Use vi(m) key bindings
 setw -g mode-keys vi
