Remove reattach-to-user-namespace

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,11 +47,11 @@ set -g status-keys vi
 
 # Enter copy-mode with vim key bindings
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-resurrect'
